# SDL-android-manual-build

./: CMakeLists.txt  README.md  build.sh  win-build.sh
android-project/: AndroidManifest.xml
android-project/java_glue/: CMakeLists.txt  SDLInputConnection.java
